Fixed sizing issue on mobile home page

--- a/src/app/layouts/public/home/home.component.scss
+++ b/src/app/layouts/public/home/home.component.scss
@@ -35,8 +35,10 @@
     width: 100%;
     height: 250px;
     margin-top: 35px;
-    text-align: center;
-    img { height: 100%; }
+    background-image: url('/assets/home/home-mobile@2x.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-fit: cover;
   }
 }
 
